# ComfyUI-KLingAI-API

./: README.md  config.ini  pyproject.toml  requirements.txt
examples/: api_test.py
py/: __init__.py  image_cover_audio_save.py  nodes.py
py/api/: __init__.py  client.py  effects.py  image2video.py  image_expander.py  image_generator.py  lip_sync.py  multi_elements_edit.py  multi_images_to_video.py  prediction.py  text2audio.py  text2video.py  video2audio.py  video_entend.py
